<resources>
    <string name="google_app_id">307395188749</string>
    <string name="app_name">SMart Customer App</string>
    <string name="loading">Loading...</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_main">Welcome, Customer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_nric">NRIC</string>
    <string name="prompt_dob">Date Of Birth</string>
    <string name="prompt_address">Home Address</string>
    <string name="prompt_postalcode">Postal Code</string>
    <string name="prompt_number">Phone Number</string>

    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign In or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">New Account Sign Up</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="title_activity_barcode_scanner">Barcode Scanner</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="race_array">
        <item>Chinese</item>
        <item>Malay</item>
        <item>Indian</item>
        <item>Other</item>
    </string-array>

    <string-array name="delivery_array">
        <item>Monday, 9am - 11am</item>
        <item>Monday, 11pm - 1pm</item>
        <item>Monday, 1pm - 3pm</item>
        <item>Monday, 3pm - 5pm</item>
        <item>Monday, 5pm - 9pm</item>

        <item>Tuesday, 9am - 11am</item>
        <item>Tuesday, 11pm - 1pm</item>
        <item>Tuesday, 1pm - 3pm</item>
        <item>Tuesday, 3pm - 5pm</item>
        <item>Tuesday, 5pm - 9pm</item>

        <item>Wednesday, 9am - 11am</item>
        <item>Wednesday, 11pm - 1pm</item>
        <item>Wednesday, 1pm - 3pm</item>
        <item>Wednesday, 3pm - 5pm</item>
        <item>Wednesday, 5pm - 9pm</item>

        <item>Thursday, 9am - 11am</item>
        <item>Thursday, 11pm - 1pm</item>
        <item>Thursday, 1pm - 3pm</item>
        <item>Thursday, 3pm - 5pm</item>
        <item>Thursday, 5pm - 9pm</item>

        <item>Friday, 9am - 11am</item>
        <item>Friday, 11pm - 1pm</item>
        <item>Friday, 1pm - 3pm</item>
        <item>Friday, 3pm - 5pm</item>
        <item>Friday, 5pm - 9pm</item>

        <item>Saturday, 9am - 11am</item>
        <item>Saturday, 11pm - 1pm</item>
        <item>Saturday, 1pm - 3pm</item>
        <item>Saturday, 3pm - 5pm</item>
        <item>Saturday, 5pm - 9pm</item>

        <item>Sunday, 9am - 11am</item>
        <item>Sunday, 11pm - 1pm</item>
        <item>Sunday, 1pm - 3pm</item>
        <item>Sunday, 3pm - 5pm</item>
        <item>Sunday, 5pm - 9pm</item>

    </string-array>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="read_qrcode">Scan QR Code</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <string name="item_search">Search Item</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="store_location">Store Location ID</string>
    <string name="submit">Submit</string>
    <string name="title_activity_shopping_cart">Your Shopping Cart</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_user">Edit Details</string>
    <string name="title_activity_item_details">ItemDetailsActivity</string>
</resources>
